feat(measure): join the collector's windows to the points
B-117. join-points.py reads every point's window off metrik and the
sampler and prints the rounds side by side; the sampler records Postgres
and broker CPU, since what saturates on a two-core box is one of them,
and reads the GC pause off the end of the line. The report gets the
reading profile up to 400 rps — no knee, and the JVM on one allowed core
running the Serial collector.

Refs: B-117